fixtures/semantic/invalid/12-vr-tx1-tx3-tx4-text.fl
component BadText {
  surface {
    text as heading {
      text-color: "red"
      level: 9
    }
  }
}
